# llm-inference-kernels

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  conftest.py  environment.lock.yml  environment.yml  requirements.txt  setup.py
benchmarks/: bench_attention.py  bench_decode_step.py  bench_e2e.py  bench_kv_cache.py  bench_w4a16.py  bench_w4a16_e2e.py  harness.py  workload.py
bindings/: extension.cpp
docs/: 00-project-overview.md  01-fused-attention-journey.md  01-fused-attention.md  02-kv-cache-compression-journey.md  02-kv-cache-compression.md  03-quantized-matmul-journey.md  03-quantized-matmul.md  04-end-to-end-integration-journey.md  05-baseline-correction-journey.md  06-attention-splitk-journey.md  07-w4a16-e2e-journey.md  benchmarking-methodology.md  running-the-repo.md
docs/learning/: foundations.md
docs/results/: RESULTS.md  env-report.md
docs/results/e2e_eval/: phase4a_attention.json  phase4b_kv_int4.json  phase4c_w4a16.json  (+2 more)
integration/: __init__.py  attention_patch.py  kv_int4_cache.py  prealloc_cache.py  w4a16_patch.py
kernels/attention/: fused_attention.cu  fused_attention.cuh  fused_attention_int4.cu  fused_attention_int8.cu  fused_attention_splitk.cu
kernels/common/: cuda_utils.cuh
kernels/fused/: fused_ops.cu  fused_ops.cuh
kernels/kv_cache/: kv_compress.cu  kv_compress.cuh
kernels/quant/: quant_matmul.cu  quant_matmul.cuh
reference/: attention_ref.py  kv_cache_ref.py  quant_matmul_ref.py
scripts/: detect_env.sh  eval_perplexity.py  load_llama.py  lock_clocks.sh  run_e2e_eval.py  run_lm_eval.py  run_phase4_eval.py
tests/: test_attention.py  test_fused.py  test_kv_cache.py  test_quant.py
(+4 files in other folders)
